--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Projet d'analyse de données – Études sur les volcans méditerranéens"
+title: "Projet d'analyse de données - Études sur les volcans méditerranéens"
 author: |
   <em>Jacobs Sofia & Bauer Julie<br>
   Master STPE/MV – UCA<br>
@@ -247,7 +247,7 @@ Les volcans grecs porduisent une plus large d'éruption de magnitudes différent
 
 p<- ggplot(df, aes(x = "", y = Depth)) +
   geom_boxplot(outlier.shape = 16, outlier.color = "red", alpha = 0.7) +  # outliers visibles
-  stat_summary(fun = mean, geom = "point", shape = 18, size = 3, color = "blue") + # moyenne
+  stat_summary(fun = mean, geom = "point", shape = 18, size = 3, color = "blue") + # moyenne.
   scale_fill_viridis(discrete = TRUE, option = "D") +  # palette harmonieuse
   theme_minimal(base_size = 14) +
   scale_y_log10() +
