--- a/ProjetAnalysededonnees.Rmd
+++ b/ProjetAnalysededonnees.Rmd
@@ -436,9 +436,13 @@ hist(df$Magnitude)
 cor(df$Magnitude, df$Depth, method = "spearman")#pas de corrélation entre les deux variables 
 ```
 
-On choist un test de corrélation de Spearman car les données ne sont pas distribuées normalement (voir histogramme). Le coefficient de corrélation est de 0.32. C'est une corrélation positive mais la valuer reste faible car comprise entre 0.1 et 0.3 à plus ou moins 0.02, on a donc une faiblecorrélation entre la profondeur et la magnitude.
+On choist un test de corrélation de Spearman car les données ne sont pas distribuées normalement (voir histogramme). Il s'agit d'un test qui est dit non paramétrique. Ce ne sont pas les données en tant que telle qui sont utilisées mais leurs rangs.
 
-### Lien entre magnitude et le volume estimé 
+Le coefficient de corrélation est de 0.32. C'est une corrélation positive mais la valuer reste faible car comprise entre 0.1 et 0.3 à plus ou moins 0.02, on a donc une faible corrélation entre la profondeur et la magnitude.
+
+### Lien entre magnitude et le volume estimé
+
+
 ```{r}
 
 ggplot(df) +  geom_point(aes(x = Magnitude, y = log(Volume)), size = 1) +
@@ -453,9 +457,11 @@ summary(res)
 check_model(res)
 ```
 
-Graphiquement, on observe une corrélation positive entre la magnitude et le volume estimé. En effet, plus la magnitude est importante plus le volume estimé l'est également. Le modèle linéaire confirme cette observation avec un R2 de 1 ce qui est très élevé. Cependant, il existe une realtion théorique entre volume estimé et magnitude. La magnitude est calculer à parit du volume estimée sur le terrain. Ils sont donc mathéatiquement reléi l'un à l'autre et cette correlétion poistive ne reflete en rien un lien naturel entre les deux varibale mais traduits une simble équation mathématiques.
+Graphiquement, on observe une corrélation positive entre la magnitude et le volume estimé. En effet, plus la magnitude est importante plus le volume estimé l'est également. Le modèle linéaire confirme cette observation avec un R2 de 1 ce qui est très élevé. Cependant, il existe une realtion théorique entre volume estimé et magnitude. La magnitude est calculer à parit du volume estimée sur le terrain. Ils sont donc mathéatiquement reléi l'un à l'autre et cette correlétion poistive ne reflete en rien un lien naturel entre les deux varibale mais traduits une simple équation mathématiques.
 
 ### Lien entre le volume et la profondeur 
+
+Une relation peut également être étudiée entre le volume estimé et la profondeur. Cependant, étant donné que le volume a été estimé à partir de la magnitude, les deux graphiques montrent exactement les mêmes tendances. Cette similitude se remarque également au niveau de la valeur du coefficient de corrélation de Spearman qui vaut 0.32.
 ```{r}
 ggplot(df) +  geom_point(aes(x = log(Volume), y = Depth), size = 1) +
   labs(
@@ -465,17 +471,17 @@ ggplot(df) +  geom_point(aes(x = log(Volume), y = Depth), size = 1) +
   ) +
   theme_minimal ()
 ```
-
+ 
 
 ```{r}
-
-cor(log(df$Volume), df$Depth, method = "spearman")#pas de corrélation entre les deux variables)
+cor(log(df$Volume), df$Depth, method = "spearman")
 ```
 Il 
 
 ## Lien entre variable qualitative et quantitative
 
 ### Magnitude en fonction des volcans
+
 
 ```{r}
 p1 <- ggplot(df, aes(x = Volcanoes, y = Magnitude, color = Volcanoes)) +
@@ -518,10 +524,22 @@ plot_grid(p1, p2, p3, nrow = 1, rel_widths = c(1, 1, 1.1))
 ```
 
 On remarque à nouveau que pour le Vésuve, on ne peut interpréter car on a qu'une seule varleur.
-Plusieurs remarques sont possibles. Tout d'abords, les magnitudes par volcans sont dépendantes, sinon l'ensebles des médiane serait alignées. De plus, médiane et moyenne ne sont pas égales, les magnitudes par volcans non donc pas une répatition modale. Enfin, les boxplots sont asymétique, on a donc une répartition non symétique de nos données.
-Il est possible d'observer que certains groupes ont des distributions bimodal et non pas juste normal. On a pas de distribution normale.
+Plusieurs remarques sont possibles. Tout d'abords, les magnitudes par volcans sont dépendantes, sinon l'ensebles des médiane serait alignées. 
+
+De plus, la médiane et la moyenne ne coincident pas, ce qui témoignent d'une asymétries au niveau des distributions. 
+Dans certains cas, les courbes de densité montrent également des bimodalités visibles. 
+
+Il est possible d'observer que certains groupes ont des distributions bimodal et non pas juste normal. 
 
 Si on veut observer une différence entre les volcans par rapport à la magnitude, on effectuer un test non-paramétrique. Un ANOVA ne fonctionnerait pas ici car nous n'avons une répartition normale de nos donnée de magnitude.
+
+Il serait intéressant de savoir si il y a bien une différence significative entre ces différents volcans par rapport à la magnitude. Pour cela, le t.test ne fonctionne car celui-ci est pour des échantillons avec deux catégories dans cette étude, il y a six volcans différents. C'est donc une ANOVA qui va être réalisée. 
+
+L'ANOVA (Analysis of Variance) permet de comparer les moyennes de plusieurs groupes pour déterminer s'il existe des différences significatives entre elles. Cependant, pour que les résultats de l'ANOVA soient valides, certaines conditions doivent être remplies :
+1. Indépendance des observations : Les données de chaque groupe doivent être indépendantes les unes des autres. 
+2. Normalité : La distribution des résidus (différences entre les valeurs observées et les valeurs prédites) doit suivre une distribution normale.
+3. Homogénéité des variances : Les variances des différents groupes doivent être similaires (homoscédasticité).
+
 
 ```{r}
 aov1 <- aov(Magnitude ~ Volcanoes, data = df)
@@ -529,6 +547,9 @@ opar <- par(mfrow = c(2, 2))
 plot(aov1)
 par(opar)
 ```
+
+
+
 ```{r}
 leveneTest(Magnitude ~ Volcanoes, data = df)#pas significatif donc cela veut dire que les variances ne sont pas hétéroscédastique, ce qui est étrange au vu du graphique précédent. Les résidus dévient également légèrement de la normalité
 ```
@@ -536,10 +557,12 @@ leveneTest(Magnitude ~ Volcanoes, data = df)#pas significatif donc cela veut dir
 ```{r}
 summary (aov1)
 ```
-pas de différence significative entre les magnitudes moyennes des différents volcans
+Le summary de l'ANOVA, donne une valeur de p-value de 0.264. Celle-ci n'est pas significative (p-value > 0.05), il n'y a donc pas de différence significative entre les volcans et les magnitudes. 
 
 
 ### Magnitude en fonction du type de magma
+
+
 
 ```{r}
 p1 <- ggplot(df, aes(x = Mag.Type, y = Magnitude, color = Mag.Type)) +
@@ -580,7 +603,7 @@ p3 <- ggplot(df, aes(x = Magnitude, fill = Mag.Type)) +
 
 plot_grid(p1, p2, p3, nrow = 1, rel_widths = c(1, 1, 1.1))
 ```
-il n'y a pas une distribution normale de la donnée. Certains des types de magmas ne présentent qu'une seul variable. 
+Il n'y a pas une distribution normale de la donnée. Certains des types de magmas ne présentent qu'une seul variable. 
 
 ```{r}
 anova_magma <- aov(Magnitude ~ Mag.Type, data = df)
@@ -652,7 +675,7 @@ kruskal.test(Depth ~ Classification, data = df)
 Le test de kruskal-wallis est signifcatif. Il faut préciser est sensible au différence de distributions donc si celles-ci sont fortement différentes comme c'est le cas ici il est possible qu'il n'y est pas uniquement une différence au niveau des médianes. 
 
 
-### Profondeur en fonction du type de magma
+### Profondeur en fonction du type de magma (à retirer)
 ```{r}
 p1 <- ggplot(df, aes(x = Mag.Type, y = Depth, color = Mag.Type)) +
   geom_boxplot(alpha = 0, width = 0.4, outlier.shape = NA) +
@@ -710,7 +733,7 @@ kruskal.test(Depth ~ Mag.Type, data = df)
 le test de kruskal-wallis n'est pas significatif. Il n'y a donc pas de différence entre les profondeurs moyennes des différents types de magma.
 
 
-### Volume estimé en fonction des volcans
+### Volume estimé en fonction des volcans (à retirer)
 ```{r}
 
 p1 <- ggplot(df, aes(x = Volcanoes, y = Volume, color = Volcanoes)) +
@@ -768,7 +791,13 @@ pas de différence significative entre les volumes moyens des différents volcan
 
 ## Lien entre deux variables qualitatives
 
+Dans cette partie de cette étude, c'est le lien entre les variables qualitatives qui va être étudié. 
+
 ### Répartition du VEI en fonction des volcans
+
+Il est interessant d'analyser si il y a un lien entre le VEI et les volcans. Pour cela, on va réaliser un graphique de répartition du VEI en fonction des volcans. Il est possible d'observer que la majorité des éruptions ont un VEI compris entre 1 et 3. Nisyros est celui qui présente le VEI le plus haut. 
+
+Un autre point important qu'il faut soulever c'est que la plupart des volcans ont un VEI faible, entre 1 et 2 en majorité. 
 ```{r}
 ggplot (df, aes (x=VEI.approximatif)) +geom_bar (aes(fill = Volcanoes),position = "dodge")+
   labs(
@@ -779,14 +808,23 @@ ggplot (df, aes (x=VEI.approximatif)) +geom_bar (aes(fill = Volcanoes),position 
   theme_minimal ()
 
 ```
+Un test peut être réalisé afin de savoir si il y a un lien entre le VEI et les différents types de volcans. Il s'agit d'un test de Chi2. Pour pouvoir faire cela, il faut d'abord réaliser un tableau de contingence. 
+
 ```{r}
 tabVEI <- table (df$VEI.approximatif,df$Volcanoes)
 chisq.test(tabVEI)
 
 ```
-test du chi 2 pas significatif car p-valeur > 0.05. Cela veut dire qu'il n'y a pas de relation significatif entre le VEI et les volcans 
+Il s'agit d'un khi-deux pour tester l'indépendance entre deux variables qualitatives. 
+Les hépytohèses : 
+H0 : il n'y a pas de relation entre le VEI et les différents volcans. 
+H1 : il y a une relation entre le VEI et les différents volcans.
+
+Dans ce cas-ci, le test du chi 2 est significatif car p-valeur > 0.05. Cela veut dire qu'il n'y a pas de relation significatif entre le VEI et les volcans 
 
 ### Répartition du type de magma en fonction des volcans
+
+Il est possible de voir que MA et MB sont les types de magmas les plus fréquents. 
 ```{r}
 ggplot (df, aes (x=Mag.Type)) +geom_bar (aes(fill = Volcanoes),position = "dodge")+
   labs(
@@ -803,7 +841,8 @@ tab
 chisq.test(tab)
 #signifcatif car p-valeur <0.05
 ```
-
+### ACF
+Une ACF est une analyse factorielle des correspondances. Cela  
 
 ```{r}
 res.ca <- CA(tab, graph = FALSE)
@@ -978,7 +1017,37 @@ fviz_pca_biplot(acp_sect,
 
 
 ```
+# Equation logistique multinomiale
+```{r}
+model <- multinom(Mag.Type ~ Magnitude , data = df)
+model1 <- multinom(Mag.Type ~ Magnitude + Volume, data = df)
+model2 <- multinom(Mag.Type ~ Magnitude + Volume + Depth, data = df)
+```
+```{r}
+summary(model)
+```
 
+```{r}
+summary(model1)#AIC la plus basse entre tout les modèles, cependant ce n'est tout de même pas des bons résultats 
+```
+Le problème est le suivant, les écarts types sont beaucoup trop petits. Le modèle va donc sur estimé les coefficients des classes qui ne sont pas du tout supperposée. Même si il y a un petit chevauchement, les classes extrêmes sont parfaitement séparés, c'est un cas de sépration quasi-complètes
+```{r}
+summary(model2)
+```
+```{r}
+model <- multinom(Volcanoes~ Magnitude , data = df)
+model1 <- multinom(Volcanoes~ Magnitude + Depth, data = df)
+model2 <- multinom(Volcanoes~ Magnitude + Depth + Volume, data = df)
+```
+```{r}
+summary(model)
+```
+```{r}
+summary(model1)
+```
+```{r}
+summary(model2)
+```
 
 
 # Clustering 
@@ -1024,20 +1093,6 @@ plot_ly(df, x = ~Volume, y = ~Depth, z = ~Magnitude,
 
 ```
 
-## Equation logistique 
-```{r}
-df_logit <- df[, c("Depth", "Magnitude", "Volume", "Volcanoes")]
-str(df_logit)
-model <- multinom(Volcanoes ~ Depth + Magnitude + Volume, data = df_logit)
-summary(model)
 
-```
-```{r}
 
-mod_mult <- multinom(Mag.Type ~ Depth + Magnitude, data = df)
-summary(mod_mult)
-
-exp(coef(mod_mult))   # odds ratios
-
-```
 
